fix: scrollbar of page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,8 @@ $white-color: #ffffff;
 
 html,
 body {
+  overflow: hidden;
+  // height: 100%;
   background-color: var(--background-primary-color);
   color: var(--color-text);
   padding: 0;
@@ -95,17 +97,17 @@ input:focus {
   outline: none;
 }
 
-textarea::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 1em;
 }
 
-textarea::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px var(--selected-color);
   -webkit-box-shadow: inset 0 0 6px var(--selected-color);
   border-radius: 0px 2px 2px 0px;
 }
 
-textarea::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: var(--selected-color);
   border-radius: 0px 2px 2px 0px;
   box-shadow: 0 0 6px var(--selected-color);
